add API updateShowtime, deleteShowtime
